<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/imageViewImpugnar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:srcCompat="@drawable/impugnar2"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:layout_gravity="end"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/imageViewVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="?attr/actionModeCloseDrawable"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:layout_marginTop="2dp"
                android:contentDescription="Return image" />

            <TextView
                android:id="@+id/textViewMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="70dp"
                android:height="40dp"
                android:textSize="25sp"
                android:text="@string/menu"
                android:layout_marginStart="60dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_vertical"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TestActivity">

            <Button
                android:id="@+id/buttonPreguntar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/pregunta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewResp4" />

            <TextView
                android:id="@+id/textViewA0"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/pregunta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewResp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewA0"
                app:srcCompat="@drawable/caja" />

            <ImageView
                android:id="@+id/imageViewResp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewResp1"
                app:srcCompat="@drawable/caja" />

            <ImageView
                android:id="@+id/imageViewResp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewResp2"
                app:srcCompat="@drawable/caja" />

            <ImageView
                android:id="@+id/imageViewResp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewResp3"
                app:srcCompat="@drawable/caja" />

            <Button
                android:id="@+id/buttonRespA00"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:text="@string/respuesta1"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewResp1"
                app:layout_constraintEnd_toEndOf="@+id/imageViewResp1"
                app:layout_constraintStart_toStartOf="@+id/imageViewResp1"
                app:layout_constraintTop_toTopOf="@+id/imageViewResp1"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeMaxTextSize="15sp"/>

            <Button
                android:id="@+id/buttonRespB"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="-3dp"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeTextType="uniform"
                android:background="@android:color/transparent"
                android:text="@string/respuesta2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewResp2"
                app:layout_constraintEnd_toEndOf="@+id/imageViewResp2"
                app:layout_constraintStart_toStartOf="@+id/imageViewResp2"
                app:layout_constraintTop_toTopOf="@+id/imageViewResp2" />

            <Button
                android:id="@+id/buttonRespC"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:text="@string/respuesta3"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewResp3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageViewResp3"
                app:layout_constraintTop_toTopOf="@+id/imageViewResp3"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeMaxTextSize="15sp"/>

            <Button
                android:id="@+id/buttonRespD"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:text="@string/respuesta4"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewResp4"
                app:layout_constraintEnd_toEndOf="@+id/imageViewResp4"
                app:layout_constraintStart_toStartOf="@+id/imageViewResp4"
                app:layout_constraintTop_toTopOf="@+id/imageViewResp4"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeMaxTextSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>